--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,40 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body{
+    background: white;
+    color: white;
+    font-size: 20px;   
+}
+h1 {
+    font-size: 30px;
+    padding-bottom: 5px;
+}
+li{
+    border-bottom: 1px solid lightgrey;
+    text-align: center;
+}
+li:hover {
+    cursor: pointer;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.container {
+    background-color: grey;
+    width: 20%;
+    padding: 5px;
+    margin: auto;
+      
+}
+button{
+    color: lightgrey;
+    background: white;
+    width: 50px;
+    text-align: center;
+    margin-left: 5%;
+    border: solid 1px lightgrey;
+    border-radius: 10px;
+}
 
-*/
+.select {
+    background-color:lightgrey;
+    border-radius: 10px;
+}
