--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 body{
-    background: white;
+    background: grey;
     color: white;
     font-size: 20px;   
 }
@@ -18,7 +18,7 @@ li:hover {
 }
 
 .container {
-    background-color: grey;
+    background-color: black;
     width: 20%;
     padding: 5px;
     margin: auto;
@@ -37,4 +37,22 @@ button{
 .select {
     background-color:lightgrey;
     border-radius: 10px;
+}
+.headermusic{
+margin: 30px;
+}
+.bodymusic{
+padding-left: 30px;
+    padding-right: 30px;
+    margin: 30px;
+}
+.footermusic{
+        padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+.corp{
+    border-radius: 32px;
+    border: inset;
 }
